--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/A-team-4/ballers-user-microservice/issues"
   },
-  "homepage": "https://github.com/A-team-4/ballers-user-microservice#readme"
+  "homepage": "https://github.com/A-team-4/ballers-user-microservice#readme",
+  "devDependencies": {
+    "typescript": "^5.6.3"
+  }
 }
