--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "skipLibCheck": true,                      // Skip type checking of declaration files
       "forceConsistentCasingInFileNames": true   // Enforce consistent file naming
     },
-    "include": ["src"],
+    "include": ["src/**/*.ts"],
     "exclude": ["node_modules", "dist"]
 }
   
