--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ballers-user-and-auth-microservice",
   "version": "1.0.0",
   "description": "user and authentication microservice for ballers app",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "npm run test",
     "build": "tsc",
