--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,13 @@
 {
     "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
+    "plugins": ["@typescript-eslint", "prettier"],
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/recommended",
-      "prettier"
+      "plugin:prettier/recommended"
     ],
     "rules": {
-      "prettier/prettier": ["error"],
+      "prettier/prettier": "error",  // Ensure Prettier errors are displayed
       "@typescript-eslint/no-unused-vars": ["error"]
     }
   }
