--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "main": "server.ts",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev src/server.ts",
     "lint": "eslint . --ext .ts",
-    "prepare": "husky"
+    "prepare": "husky",
+    "docker:build:image": "docker build -t footy-user-microservice .",
+    "docker:stop:container":"docker stop user-microservice-container",
+    "docker:remove:container": "docker rm user-microservice-container",
+    "docker:run:container": "npm run docker:remove:container && docker run --name user-microservice-container -p 3000:3000 footy-user-microservice:latest",
+    "docker:start": "npm run docker:build:image && npm run docker:run:container"    
   },
   "lint-staged": {
     "**/*.ts": [
@@ -44,6 +50,7 @@
     "lint-staged": "^15.2.10",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
