--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ballers-user-and-auth-microservice",
   "version": "1.0.0",
-  "description": "user and authentication microservice for ballers app",
+  "description": "User and authentication microservice for ballers app",
   "main": "server.ts",
   "scripts": {
     "test": "jest",
