--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "lint": "eslint . --ext .ts",
     "prepare": "husky",
     "docker:build:image": "docker build -t footy-user-microservice .",
-    "docker:stop:container":"docker stop user-microservice-container",
+    "docker:stop:container": "docker stop user-microservice-container",
     "docker:remove:container": "docker rm user-microservice-container",
     "docker:run:container": "npm run docker:remove:container && docker run --name user-microservice-container -p 3000:3000 footy-user-microservice:latest",
-    "docker:start": "npm run docker:build:image && npm run docker:run:container"    
+    "docker:start": "npm run docker:build:image && npm run docker:run:container"
   },
   "lint-staged": {
     "**/*.ts": [
@@ -60,6 +60,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongoose": "^8.7.2"
   }
 }
