--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -13,6 +13,21 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+
+        # Setup Node.js using the .nvmrc
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: .nvmrc
+
+      # Install npm 10.8.2 globally in CI environment
+      - name: Install npm 10.8.2
+        run: npm install -g npm@10.8.2
+
+      # Verify Node.js and npm versions
+      - run: node -v
+      - run: npm -v
+
       - name: Install Packages to Runner
         run: |
           npm install
@@ -22,6 +37,6 @@ jobs:
       - name: Run Tests
         run: |
           npm test
-        env: 
-          MONGO_URI: ${{ secrets.USER_SERVICE_DB_URI }}        
+        env:
+          MONGO_URI: ${{ secrets.USER_SERVICE_DB_URI }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
