--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.7.2"
+    "mongoose": "^8.7.2",
+    "validator": "^13.12.0"
   }
 }
