--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/validator": "^13.12.2",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
