--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -8,11 +8,27 @@ jobs:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - run: node -v
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+
+      # Setup Node.js based on .nvmrc (20.18.0)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.18.0'
+
+      # Install npm 10.8.2 globally
+      - name: Install npm 10.8.2
+        run: npm install -g npm@10.8.2
+
+      # Verify Node.js and npm versions
+      - name: Verify Node and npm versions
+        run: |
+          node -v
+          npm -v
+
       - name: Install Packages to Runner
         run: |
           npm install
@@ -22,6 +38,6 @@ jobs:
       - name: Run Tests
         run: |
           npm test
-        env: 
-          MONGO_URI: ${{ secrets.USER_SERVICE_DB_URI }}        
+        env:
+          MONGO_URI: ${{ secrets.USER_SERVICE_DB_URI }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
