--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "url": "https://github.com/A-team-4/ballers-user-microservice/issues"
   },
   "homepage": "https://github.com/A-team-4/ballers-user-microservice#readme",
+  "engines": {
+    "node": ">=20.18.0",
+    "npm": ">=10.8.2"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
@@ -63,6 +67,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
+    "npm": "^10.8.2",
     "validator": "^13.12.0"
   }
 }
